--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,31 @@
+* {
+  margin: 0;
+  padding: 0; 
+}
+
 @font-face {
   font-family: "Lato-Regular";
   src: url("../fonts/Lato-Regular.ttf")
+}
+.header {
+  background-color: black;
+  width: 100%;
+  height: 400px;
+  margin: auto;
+}
+
+.container {
+  background-color: #216393;
+  width: 100%;
+  height: 700px;
+  margin: auto;
+  opacity: 0.3;
+
+}
+
+.background {
+  background-color: red;
+
 }
 
 footer {
