--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 * {
   margin: 0;
-  padding: 0; 
+  padding: 0;
+}
+body {
+  /* font-family:  */
 }
 
 @font-face {
@@ -14,13 +17,24 @@
   margin: auto;
 }
 
+.boks {
+  display: flex;
+  width: 350px;
+  height: 200px;
+  background-color: white;
+  /* align-content: center; */
+  flex-direction: center; 
+
+}
+
+
+
 .container {
   background-color: #216393;
   width: 100%;
   height: 700px;
   margin: auto;
   opacity: 0.3;
-
 }
 
 .background {
