--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,11 +23,14 @@ body {
 padding: 20px;
 }
 
+.a active {
+  background-color: red; 
+}
+
 nav {
   height: 40px;
   float: right;
 }
-
 
 li a {
   text-decoration: none;
