--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,3 +172,70 @@ margin-left: 150px;
 #socialmedia a:hover { /* Når man holder over ikonerne skifter de farve */
   color: #00a19b;
 }
+/**************************MATERIALER*************************/
+#content-wrapper {
+  background-color: #000;
+  width: 100%;
+  float: left;
+}
+#box-left {
+  float: left;
+  width: 400px;
+  height: 1200px;
+  background-color: #fff;
+  margin: 20px 0px 20px 20px;
+  border-radius: 20px;
+}
+#box-main {
+  float: left;
+  width: 1100px;
+  height: 600px;
+  background-color: #fff;
+  margin: 20px 0px 20px 20px;
+  border-radius: 20px;
+}
+.box-title {
+  width: 100%;
+  height: 60px;
+  float: left;
+  background-color: #044C7F;
+  border-radius: 20px 20px 0px 0px;
+}
+.img-container {
+  width: 120px;
+  height: 120px;
+  background-color: black;
+  margin: 20px 20px 20px 20px;
+  float: left;
+}
+.description {
+  width: 220px;
+  height: 120px;
+  float: left;
+  background-color: #ccc;
+  margin: 20px 20px 20px 0px;
+}
+#main_boxleft {
+  width: 530px;
+  height: 600px;
+  float: left;
+  background-color: #fff;
+  margin: 0px 20px 20px 20px;
+  border-radius: 20px;
+}
+#main_boxright {
+  width: 530px;
+  height: 600px;
+  float: left;
+  background-color: #fff;
+  margin: 0px 20px 20px 20px;
+  border-radius: 20px;
+}
+.plan-container {
+  width: 200px;
+  height: 250px;
+  float: left;
+  background-color: blue;
+  border-radius: 20px 20px 0px 0px;
+  margin: 20px;
+}
