--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,7 @@ p.comment {
 footer {
   background-color: #216393;
   width: 100%;
-  float: left;
+  clear: both;
   color: white;
   font-family: "Lato-Regular";
 }
@@ -188,7 +188,7 @@ margin-left: 150px;
 #content-wrapper {
   background-color: #000;
   width: 100%;
-  float: left;
+  margin: auto;
 }
 #box-left {
   float: left;
