--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 }
 body {
   /* font-family:  */
+
 }
 
 @font-face {
@@ -22,7 +23,6 @@ li.active {
 nav {
   height: 40px;
   float: right;
-  background-color: white;
 }
 
 li a {
@@ -48,55 +48,60 @@ ul {
   display: flex;
   height: 350px;
   width: 350px;
-  float: left;
-  margin: 30px 0px 30px 50px;
 }
 
 .kasse1 {
   display: flex;
   background-color: grey;
-  /* float: left; */
-  height: 150px;
+  height: 120px;
   width: 350px;
-  margin: 0px 0px 50px 50px;
 }
 
-#header_section {
-  margin-top: 40px;
+header {
+  height: 400px;
+  width: 100%;
+  background-color: green;
+  clear: both;
 }
 
-#header_section .image_section1 img {
+#header_container {
+  /* margin-top: 40px; */
+  display: flex;
+  width: 1300px;
+  margin: auto;
+  background-color: red;
+  height: 400px;
+  justify-content: center;
+}
+
+#header_container .image_section1 img {
   max-width: 100%;
   height: auto; /* Sørger for at billedet ser almindeligt ud*/
 }
 
-#header_section .image_section1 {
-  float: left;
-  width: 33%;
+.image_section1 {
+  padding: 30px;
 }
 
-.container {
+#container {
   background-color: blue;
   width: 100%;
-  /* height: 100vh; */
+  /* min-height: 100vh; */
   margin: auto;
+  padding: 40px 0px 40px 0px;
 }
 
 .section_container {
 background-color: #B4D0E0;
-width: 1200px;
-height: 100vh;
+width: 1300px;
+/* min-height: 80vh; */
 display: flex;
 margin: auto;
 flex-wrap: wrap;
 justify-content: center;
-padding: 30px;
 border-radius: 30px;
-}
+padding: 40px 0px 40px 0px;
 
-.justify-boks {
-  justify-content: center;
-  margin-left: auto;
 }
 
 .boks {
@@ -105,6 +110,7 @@ border-radius: 30px;
   background-color: white;
   font-family: "Lato-Regular";
   padding: 3px; /* Lille kant rundt om billedet i boksen */
+  margin: 0px 10px 0px 10px;
 }
 
 .boks h2 {
