--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ header {
   height: 700px;
   width: 100%;
   background-image: url("../images/forsidebillede1.png");
+  background-size: contain;
   clear: both;
 }
 
