--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,7 @@ header {
   width: 100%;
   background-image: url("../images/forsidebillede1.png");
   clear: both;
+  background-image:
 }
 
 #header_container {
