Revert "Merge branch 'master' of https://github.com/emrahpeskovic/kedu"
This reverts commit 4a657039e9fd31560e0020092fb7a0200785c55d, reversing
changes made to b0fa17311baa102823012d38aa1ff613b7e890bc.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ ul {
 header {
   height: 700px;
   width: 100%;
-  background-image: url("../images/forsidebillede1.png");
+  background-color: blue;
   clear: both;
   background-image:
 }
