--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,8 +46,7 @@ ul {
 
 .headerpicture {
   display: flex;
-  height: 500px;
-  width: 450px;
+  width: 100%;
   margin-top: 50px;
 }
 
@@ -55,28 +54,25 @@ ul {
   display: flex;
   background-color: grey;
   height: 120px;
-  width: 450px;
 }
 
 header {
   height: 700px;
   width: 100%;
-<<<<<<< HEAD
-  background-color: blue;
-=======
+  background-color: black;
   background-image: url("../images/forsidebillede1.png");
->>>>>>> parent of 19d7f7f... Merge branch 'master' of https://github.com/emrahpeskovic/kedu
   clear: both;
-  background-image:
+  margin: 0;
 }
 
 #header_container {
   /* margin-top: 40px; */
   display: flex;
-  width: 1500px;
+  width: 100%;
   margin: auto;
   height: 700px;
-  justify-content: space-between;
+  justify-content: space-around;
+  background-color: green;
 }
 
 #container {
@@ -93,11 +89,11 @@ header {
 
 .section_container {
 background-color: #B4D0E0;
-width: 1500px;
 display: flex;
-margin: auto;
 flex-wrap: wrap;
 justify-content: center;
+margin-left: 3%;
+margin-right: 3%;
 border-radius: 30px;
 padding: 40px 0px 40px 0px;
 }
