--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ li.active {
 
 nav {
   height: 40px;
-  float: right;
+  width: 40%;
 }
 
 li a {
@@ -32,35 +32,39 @@ li a {
 }
 
 li {
+  display: flex;
   list-style: none;
-  width: 110px;
+  width: 100%;
   height: 40px;
   background-color: #044C7F;
-  margin: 0px 2px 4px 0.5px;
-  text-align: center;
+  margin: 0px 3px 0px 0px;
+  justify-content: center;
+  align-items: center;
 }
 
 ul {
+  position: absolute;
   display: flex;
+  justify-content: flex-end;
+  right: 0;
+  width: 50%;
 }
 
 .headerpicture {
   display: flex;
   width: 100%;
-  margin-top: 50px;
 }
 
 .kasse1 {
-  display: flex;
-  background-color: grey;
+  background-color: white;
   height: 120px;
+  padding: 30px;
 }
 
 header {
-  height: 700px;
   width: 100%;
   background-color: black;
-  background-image: url("../images/forsidebillede1.png");
+  background-image: url("../images/login_bg.jpg");
   clear: both;
   margin: 0;
 }
@@ -70,20 +74,20 @@ header {
   display: flex;
   width: 100%;
   margin: auto;
-  height: 700px;
-  justify-content: space-around;
-  background-color: green;
+  justify-content: space-between;
+  flex-direction: row;
 }
 
 #container {
   background-color: blue;
   width: 100%;
-  min-height: 100vh;
   margin: auto;
   padding: 40px 0px 40px 0px;
 }
 
 .image_section1 {
+  margin: 28px;
+  flex: 1;
 }
 
 .section_container {
