--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,12 @@ nav {
   width: 40%;
 }
 
+#nav_undersidebar {
+  height: 15px;
+  width: 100%;
+  background-color: #044C7F;
+}
+
 li a {
   text-decoration: none;
   font-size: 20px;
@@ -40,6 +46,10 @@ li {
   margin: 0px 3px 0px 0px;
   justify-content: center;
   align-items: center;
+}
+
+li:last-child {
+  margin-right: 0;
 }
 
 ul {
@@ -79,7 +89,7 @@ header {
 }
 
 #container {
-  background-color: blue;
+  background-color: #216393;
   width: 100%;
   margin: auto;
   padding: 40px 0px 40px 0px;
