--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 li.active {
-  background-color: #216393;
+  opacity: 0.5;
 }
 
 nav {
@@ -39,6 +39,7 @@ li a {
   font-family: Lato-Regular;
 }
 
+
 li {
   display: flex;
   list-style: none;
@@ -48,6 +49,12 @@ li {
   margin: 0px 3px 0px 0px;
   justify-content: center;
   align-items: center;
+  transition:all 0.3s ease;
+  opacity: 1;
+}
+
+li:hover {
+  opacity: 0.5;
 }
 
 li:last-child {
@@ -102,6 +109,11 @@ q
 .image_section1 {
   margin: 28px;
   flex: 1;
+  transition:all 0.3s ease;
+}
+
+.image_section1:hover {
+  opacity: 0.4;
 }
 
 .section_container {
