--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,8 +134,8 @@ header#header-minprofil {
   left: 0px;
   width: 100%;
   height: 120px;
-  display: flex;
   padding-left: 2%;
+  display: flex;
   align-items: center;
   justify-content: flex-start;
   box-sizing: border-box;
@@ -150,7 +150,6 @@ h1#page-title {
 #container {
   background-color: #216393;
   width: 100%;
-  max-width: 1366px
   margin: auto;
 }
 
@@ -158,14 +157,16 @@ h1#page-title {
   margin: 28px;
   flex: 1;
   transition:all 0.3s ease;
+  box-shadow: 2px 2px 5px #747474;
 }
 
 .image_section1:hover {
   opacity: 0.8;
+
 }
 
 .section_container {
-background-color: #B4D0E0;
+background-color: #E4ECF2;
 display: flex;
 flex-wrap: wrap;
 justify-content: center;
@@ -179,6 +180,7 @@ padding: 40px 0px 40px 0px;
   font-family: "Lato-Regular";
   padding: 3px; /* Lille kant rundt om billedet i boksen */
   margin: 10px 10px 10px 10px;
+  box-shadow: 2px 2px 3px #c4c4c4;
 }
 
 .boks h2 {
@@ -258,24 +260,26 @@ margin-left: 150px;
 }
 /**************************MATERIALER*************************/
 #wrapper {
+  padding: 20px 20px 20px 20px;
+  box-sizing: border-box;
   display: flex;
   min-width: 1024px;
   flex-direction: row;
-  margin: 300px 0px 0px 0px;
   background-color: #B4D0E0;
 }
 #aside-kurser {
-  background: #fff;
+  background: #E4ECF2;
   flex: 1;
   flex-direction: column;
   display: flex;
   align-items: center;
+  border-radius: 20px;
 }
 #col-2 {
   display: flex;
   flex-direction: column;
   flex: 3;
-  margin: 0px 20px 0px 20px;
+  margin: 0px 0px 0px 20px;
 }
 #content {
   display: flex;
@@ -283,21 +287,24 @@ margin-left: 150px;
 }
 #section_aarsplaner {
   flex: 1;
-  background-color: #fff;
+  background-color: #E4ECF2;
   height: 200px;
-    margin: 20px 10px 0px 00px;
+  margin: 20px 10px 0px 0px;
+  border-radius: 20px;
 }
 #emnedage {
-  background: #fff;
+  background: #E4ECF2;
   flex: 1;
   height: 200px;
   margin: 20px 0px 0px 10px;
+  border-radius: 20px;
 }
 #section-lektionsplaner {
-  background: #fff;
+  background: #E4ECF2;
   display: flex;
   flex-direction: row wrap;
   justify-content: space-evenly;
+  border-radius: 0px 0px 20px 20px;
 }
 /* ******************************************* */
 .kursus {
@@ -312,12 +319,17 @@ margin-left: 150px;
   background-color: brown;
   margin: 20px 0px 20px 0px;
 }
-.title {
+h1.box-title {
   width: 100%;
+  height: 70px;
   background-color: #044C7F;
   color: #fff;
-  text-align: center;
   float: left;
-  padding: 10px;
   box-sizing: border-box;
+  font-family: "Lato-Regular";
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px 20px 0px 0px;
 }
